q7/src/parser/Q7.java
/* Generated By:JavaCC: Do not edit this line. Q7.java */
package parser;
import java.util.Hashtable;

import model.Advice;
import model.Effect;
import model.Entity;
import model.How;
import model.Pointcut;

public class Q7 implements Q7Constants {
  static Q7 parser;
  static String comment;
  static void initialize_parser(java.io.InputStream in) {
      if (parser == null)
              parser = new Q7(in);
          else
                  Q7.ReInit(in);
  }
  public static java.util.ArrayList<Advice> a = null;
  @SuppressWarnings("unchecked")
public static void main(String args[]) {
      try {
            initialize_parser(new java.io.FileInputStream(args[0]));
      } catch (java.io.FileNotFoundException e) {
        return;
      }
    a = null;
    try {
      Entity.aliases = new Hashtable();
          a = Q7.Advices();
    } catch (ParseException e) {
      System.out.println("Q7 Parser Version 0.1:  Encountered errors during parse.");
      e.printStackTrace();
    }
  }

/*****************************************
 * THE TELOS LANGUAGE GRAMMAR STARTS HERE *
 *****************************************/

/*
 * Program structuring syntax follows.
 */
  static final public java.util.ArrayList Advices() throws ParseException {
  Advice t;
  java.util.ArrayList<Advice> a = new java.util.ArrayList<Advice>();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRING_LITERAL:
      case LEFT_BR:
      case LEFT_PAR:
      case ID:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      t = Advice();
                   a.add(t);
    }
   {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  static final public Advice Advice() throws ParseException {
    String op = null;
        String when = null;
        String who = null;
        String why = null;
        String what = null;
        String alias = null;
        java.util.ArrayList where = null;
        How how = null;
        java.util.ArrayList how_much = null;
        String label = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT_PAR:
      jj_consume_token(LEFT_PAR);
      op = Op();
      when = When();
      jj_consume_token(RIGHT_PAR);
      jj_consume_token(IMPLIES);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING_LITERAL:
    case LEFT_BR:
    case ID:
      if (jj_2_1(3)) {
        jj_consume_token(LEFT_BR);
        who = Who();
        jj_consume_token(RIGHT_BR);
        jj_consume_token(SCOPE);
      } else {
        ;
      }
      why = Why();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFT_BRACKET:
        jj_consume_token(LEFT_BRACKET);
        what = What();
        jj_consume_token(RIGHT_BRACKET);
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AS:
      case ALIAS:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ALIAS:
          jj_consume_token(ALIAS);
          break;
        case AS:
          jj_consume_token(AS);
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        alias = Alias();
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WEAVES:
        jj_consume_token(WEAVES);
        where = Where();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[6] = jj_gen;
      if (jj_2_2(3)) {
        jj_consume_token(LEFT_BR);
        who = Who();
        jj_consume_token(RIGHT_BR);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT_BRACE:
      jj_consume_token(LEFT_BRACE);
      how = How();
      jj_consume_token(RIGHT_BRACE);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AT:
      jj_consume_token(AT);
      label = Label();
      jj_consume_token(AT);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IMPLIES:
    case DEPENDS:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IMPLIES:
        jj_consume_token(IMPLIES);
        how_much = HowMuch();
        break;
      case DEPENDS:
        jj_consume_token(DEPENDS);
        how_much = Agents();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
        Advice a = new Advice(op!=null? op + ":" + when: when, who, why, what, alias, where, how, how_much, Q7.comment==null?null: (""+Q7.comment), label);
        Q7.comment = null;
        {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  static final public String When() throws ParseException {
  Token  condition = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      condition = jj_consume_token(ID);
      break;
    case STRING_LITERAL:
      condition = jj_consume_token(STRING_LITERAL);
      break;
    case TRUE:
      condition = jj_consume_token(TRUE);
      break;
    case FALSE:
      condition = jj_consume_token(FALSE);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return condition.toString();}
    throw new Error("Missing return statement in function");
  }

  static final public String Who() throws ParseException {
  Token  agent = null;
  String who = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      agent = jj_consume_token(ID);
      break;
    case STRING_LITERAL:
      agent = jj_consume_token(STRING_LITERAL);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING_LITERAL:
    case ID:
      who = Who();
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    {if (true) return  agent.toString() + (who!=null? who: "");}
    throw new Error("Missing return statement in function");
  }

  static final public String Why() throws ParseException {
  Token  goal = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      goal = jj_consume_token(ID);
      break;
    case STRING_LITERAL:
      goal = jj_consume_token(STRING_LITERAL);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return goal.toString();}
    throw new Error("Missing return statement in function");
  }

  static final public String Alias() throws ParseException {
  Token  alias = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      alias = jj_consume_token(ID);
      break;
    case STRING_LITERAL:
      alias = jj_consume_token(STRING_LITERAL);
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return alias.toString();}
    throw new Error("Missing return statement in function");
  }

  static final public String Label() throws ParseException {
  Token label = null;
  String l = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LABEL_FS:
      label = jj_consume_token(LABEL_FS);
      break;
    case LABEL_PS:
      label = jj_consume_token(LABEL_PS);
      break;
    case LABEL_PD:
      label = jj_consume_token(LABEL_PD);
      break;
    case LABEL_FD:
      label = jj_consume_token(LABEL_FD);
      break;
    case LABEL_CF:
      label = jj_consume_token(LABEL_CF);
      break;
    case LABEL_UN:
      label = jj_consume_token(LABEL_UN);
      break;
    case INTEGER_LITERAL:
    case NON_NEGATIVE_FLOATING_POINT_LITERAL:
      l = LabelList();
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return (label==null && l!=null) ? l: label.toString();}
    throw new Error("Missing return statement in function");
  }

  static final public String LabelList() throws ParseException {
  @SuppressWarnings("unused")
String r = null;
  Token l1 = null;
  String l2 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NON_NEGATIVE_FLOATING_POINT_LITERAL:
      l1 = jj_consume_token(NON_NEGATIVE_FLOATING_POINT_LITERAL);
      break;
    case INTEGER_LITERAL:
      l1 = jj_consume_token(INTEGER_LITERAL);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (l1==null) {if (true) return null;}
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      l2 = LabelList();
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
     if (l2==null) {if (true) return l1.toString();}
     {if (true) return l1.toString() + ", " + l2;}
    throw new Error("Missing return statement in function");
  }

  static final public String What() throws ParseException {
  Token topic = null;
  String what = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      topic = jj_consume_token(ID);
      break;
    case STRING_LITERAL:
      topic = jj_consume_token(STRING_LITERAL);
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      what = What();
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
    if (what == null)
            {if (true) return topic.toString();}
        {if (true) return topic.toString().trim() + "," + what;}
    throw new Error("Missing return statement in function");
  }

  static final public java.util.ArrayList<Pointcut> Where() throws ParseException {
  java.util.ArrayList<Pointcut> where = null;
  java.util.ArrayList<Pointcut> pointcuts;
  Pointcut pointcut = null;
    pointcut = Pointcut();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      where = Where();
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
        if (where == null)
                pointcuts = new java.util.ArrayList<Pointcut>();
        else
                pointcuts = where;
        pointcuts.add(pointcut);
        {if (true) return pointcuts;}
    throw new Error("Missing return statement in function");
  }

  static final public java.util.ArrayList<Effect> HowMuch() throws ParseException {
  java.util.ArrayList<Effect> effects;
  java.util.ArrayList<Effect> howmuch = null;
  Effect effect = null;
    effect = Effect();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      howmuch = HowMuch();
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    if (howmuch==null)
        effects = new java.util.ArrayList<Effect>();
    else
            effects = howmuch;
    effects.add(effect);
    {if (true) return effects;}
    throw new Error("Missing return statement in function");
  }

  static final public java.util.ArrayList<Effect> Agents() throws ParseException {
  java.util.ArrayList<Effect> effects;
  java.util.ArrayList<Effect> howmuch = null;
  Effect effect = null;
    effect = DepEffect();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      howmuch = Agents();
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    if (howmuch==null)
        effects = new java.util.ArrayList<Effect>();
    else
            effects = howmuch;
    effects.add(effect);
    {if (true) return effects;}
    throw new Error("Missing return statement in function");
  }

  static final public String Op() throws ParseException {
        Token op = null;
        Token degree = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case HELP:
      op = jj_consume_token(HELP);
      break;
    case HURT:
      op = jj_consume_token(HURT);
      break;
    case BREAK:
      op = jj_consume_token(BREAK);
      break;
    case MAKE:
      op = jj_consume_token(MAKE);
      break;
    case DEP:
      op = jj_consume_token(DEP);
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case NON_NEGATIVE_FLOATING_POINT_LITERAL:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NON_NEGATIVE_FLOATING_POINT_LITERAL:
        degree = jj_consume_token(NON_NEGATIVE_FLOATING_POINT_LITERAL);
        break;
      case INTEGER_LITERAL:
        degree = jj_consume_token(INTEGER_LITERAL);
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
                {if (true) return op.toString() + (degree!=null? " " + degree.toString():"");}
    throw new Error("Missing return statement in function");
  }

  static final public Effect Effect() throws ParseException {
  String op = null;
  String who = null;
  String why = null;
  String what = null;
  String alias = null;
    op = Op();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT_BR:
      jj_consume_token(LEFT_BR);
      who = Who();
      jj_consume_token(RIGHT_BR);
      jj_consume_token(SCOPE);
      break;
    default:
      jj_la1[27] = jj_gen;
      ;
    }
    why = Why();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT_BRACKET:
      jj_consume_token(LEFT_BRACKET);
      what = What();
      jj_consume_token(RIGHT_BRACKET);
      break;
    default:
      jj_la1[28] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AS:
    case ALIAS:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ALIAS:
        jj_consume_token(ALIAS);
        break;
      case AS:
        jj_consume_token(AS);
        break;
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      alias = Alias();
      break;
    default:
      jj_la1[30] = jj_gen;
      ;
    }
    {if (true) return new Effect(op == null? "~": op, who, why, what, alias);}
    throw new Error("Missing return statement in function");
  }

  static final public Effect DepEffect() throws ParseException {
  String who = null;
    jj_consume_token(LEFT_BR);
    who = Who();
    jj_consume_token(RIGHT_BR);
    {if (true) return new Effect("~", who, null, null, null);}
    throw new Error("Missing return statement in function");
  }

/* currently, Pointcut are the same as Effect,
   except that the string can be replaced by
   wildcards */
  static final public Pointcut Pointcut() throws ParseException {
  String op1 = null;
  Token op = null;
  String who = null;
  String why = null;
  String what = null;
  String alias = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAKE:
    case HELP:
    case HURT:
    case BREAK:
    case DEP:
      op1 = Op();
      break;
    case AND:
      op = jj_consume_token(AND);
      break;
    case OR:
      op = jj_consume_token(OR);
      break;
    case ANDSYMB:
      op = jj_consume_token(ANDSYMB);
      break;
    case ORSYMB:
      op = jj_consume_token(ORSYMB);
      break;
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT_BR:
      jj_consume_token(LEFT_BR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
        jj_consume_token(STAR);
        break;
      case STRING_LITERAL:
      case ID:
        who = Who();
        break;
      default:
        jj_la1[32] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(RIGHT_BR);
      jj_consume_token(SCOPE);
      break;
    default:
      jj_la1[33] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STAR:
      jj_consume_token(STAR);
      break;
    case STRING_LITERAL:
    case ID:
      why = Why();
      break;
    default:
      jj_la1[34] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT_BRACKET:
      jj_consume_token(LEFT_BRACKET);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
        jj_consume_token(STAR);
        break;
      case STRING_LITERAL:
      case ID:
        what = What();
        break;
      default:
        jj_la1[35] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(RIGHT_BRACKET);
      break;
    default:
      jj_la1[36] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AS:
    case ALIAS:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ALIAS:
        jj_consume_token(ALIAS);
        break;
      case AS:
        jj_consume_token(AS);
        break;
      default:
        jj_la1[37] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      alias = Alias();
      break;
    default:
      jj_la1[38] = jj_gen;
      ;
    }
    {if (true) return new Pointcut(op1==null?"~":
                                        (op!=null?(op.toString().equals("AND")?"&":
                                                           (op.toString().equals("OR") ? "|":op1)):
                                          op1),
                who==null? "*": who.toString(),
                why==null? "*" : why.toString(),
                what==null?"*":what.toString(),
                alias==null?"*":alias.toString());}
    throw new Error("Missing return statement in function");
  }

  static final public How How() throws ParseException {
  Token rule = null;
  Token enrich = null;
  java.util.ArrayList advices = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      rule = jj_consume_token(AND);
      break;
    case OR:
      rule = jj_consume_token(OR);
      break;
    case ANDSYMB:
      rule = jj_consume_token(ANDSYMB);
      break;
    case ORSYMB:
      rule = jj_consume_token(ORSYMB);
